# rollup-yew-rust-example

./: Cargo.toml  index.html  tailwindinput.css  tailwindoutput.css
src/: app.rs  main.rs
src/functions/: js_glue.rs  mod.rs
src/js/: capacitor.config.ts  package-lock.json  package.json  rollup.config.js
src/js/android/: capacitor.settings.gradle
src/js/android/app/: build.gradle  capacitor.build.gradle
src/js/android/app/src/main/: AndroidManifest.xml
src/js/android/app/src/main/assets/: capacitor.config.json  capacitor.plugins.json
src/js/android/app/src/main/java/cusp/com/: MainActivity.java
src/js/android/app/src/main/res/values/: strings.xml
src/js/public/: bundler_test-921f40a3037cd7c1.js  bundler_test-921f40a3037cd7c1_bg.wasm  index.html
src/js/src/: caller.js  sender.js
src/pages/: index.rs
